kubernetes/ocelot/base/ocelot-deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: ocelot
  namespace: ocelot
  labels:
    app: ocelot
spec:
  replicas: 1
  selector:
    matchLabels:
      app: ocelot
  template:
    metadata:
      labels:
        app: ocelot
    spec:
      imagePullSecrets:
      - name: gitlab-registry
      containers:
      - name: ocelot
        image: registry.omni-rs.com/r13/omniretailsuite/ocelot:latest
        ports:
        - containerPort: 7200
        volumeMounts:
        - name: ocelot-config-volume
          mountPath: "/app/configuration"
        - name: ocelot-pfx
          mountPath: "/app/pfx"
      volumes:
      - name: ocelot-config-volume
        configMap:
          name: ocelot-config
          items:
          - key: ocelot.json
            path: ocelot.json 
      - name: ocelot-pfx 
        secret:
          secretName: omni-rs-com-pfx
