kubernetes/ocelot/base/ocelot-service.yml
apiVersion: v1
kind: Service
metadata:
  name: ocelot
  namespace: ocelot
spec:
  selector:
    app: ocelot
  type: NodePort
  ports:
    - name: consul
      port: 7200
      targetPort: 7200
