kubernetes/ocelot/base/ocelot-ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ocelot-ingress
  namespace: ocelot
  annotations:
    nginx.ingress.kubernetes.io/backend-protocol: "HTTPS"   
    nginx.ingress.kubernetes.io/whitelist-source-range: "192.168.50.0/24, 83.10.135.2, 83.10.123.40"
spec:
  rules:
  - host: ocelot.omni-rs.com
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: ocelot
            port:
              number: 7200
  tls:
  - hosts:
    - ocelot.omni-rs.com
    secretName: omni-rs-com-tls-sub
